Upgrade Spring, improve performance